创建启动页，加载volley网络请求框架

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">Mobile</string>
+    <string name="app_name">安全卫士</string>
+    <string name="url_server">http://192.168.106.2:8080/updateinfo.html</string>
 </resources>
