--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">安全卫士</string>
     <string name="url_server">http://192.168.106.2:8080/updateinfo.html</string>
+    <string name="net_wrong">当前网络没有连接，请检查网络设置！</string>
 </resources>
