--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">安全卫士</string>
     <string name="url_server">http://192.168.106.2:8080/updateinfo.html</string>
-    <string name="net_wrong">当前网络没有连接，请检查网络设置！</string>
+    <string name="net_wrong">服务器错误，请稍后重试！</string>
 
     <!-- s管理中心 -->
     <string name="manage_center_download">下载管理</string>
