--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,9 @@
     <string name="app_name">安全卫士</string>
     <string name="url_server">http://192.168.106.2:8080/updateinfo.html</string>
     <string name="net_wrong">服务器错误，请稍后重试！</string>
+    <string name="update_fail">服务器错误，无法获取更新，请稍后重试！</string>
 
-    <!-- s管理中心 -->
+    <!-- 管理中心 -->
     <string name="manage_center_download">下载管理</string>
     <string name="manage_center_installed">软件卸载</string>
     <string name="manage_center_apk_move">应用搬家</string>
@@ -16,4 +17,10 @@
     <string name="manage_center_hongbao">抢红包</string>
     <string name="manage_center_setting">设置</string>
     <string name="manage_center_scan">扫一扫</string>
+    
+    <!-- 首页功能 -->
+    <string name="safe_lost_find">手机防盗</string>
+    <string name="safe_anti_virus">手机杀毒</string>
+    <string name="safe_task_manager">进程管理</string>
+    <string name="safe_soft_manager">应用管理</string>
 </resources>
