--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,9 +8,9 @@
     <string name="manage_center_download">下载管理</string>
     <string name="manage_center_installed">软件卸载</string>
     <string name="manage_center_apk_move">应用搬家</string>
-    <string name="manage_center_favorite">云收藏</string>
+    <string name="manage_center_favorite">缓存清理</string>
     <string name="manage_center_apk_manage">安装包清理</string>
-    <string name="manage_center_installed_backup">备份</string>
+    <string name="manage_center_installed_backup">百宝箱</string>
     <string name="manage_center_fast_pass">免流量快传</string>
     <string name="manage_center_skin">更换皮肤</string>
     <string name="manage_center_google">谷歌检测</string>
