完善隐私保护、淘应用、通信卫士。启动页优化

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,7 +28,8 @@
     <string name="title_activity_setting">设置</string>
     <string name="setting_auto_update">自动检测更新</string>
     <string name="setting_location">来电归属地显示</string>
-    <string name="setting_black_number">骚扰拦截</string>
+    <string name="setting_black_number">通信拦截</string>
+    <string name="setting_app_lock">隐私保护</string>
     <string name="setting_toast_id">归属地提示框</string>
 
     <!--setting menu-->
