--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,10 @@
     <string name="net_wrong">服务器错误，请稍后重试！</string>
     <string name="update_fail">服务器错误，无法获取更新，请稍后重试！</string>
 
+    <!--首页ActionBarDrawerToggle-->
+    <string name="open">打开</string>
+    <string name="close">关闭</string>
+
     <!-- 管理中心 -->
     <string name="manage_center_contact_assistant">通信助手</string>
     <string name="manage_center_find_app">淘应用</string>
